--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.4.0",
     "@rneui/base": "^4.0.0-rc.8",
     "expo": "~51.0.18",
+    "expo-font": "^12.0.8",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
     "react": "18.2.0",
