--- a/package.json
+++ b/package.json
@@ -16,12 +16,8 @@
     "@react-navigation/stack": "^6.4.0",
     "@rneui/base": "^4.0.0-rc.8",
     "expo": "~51.0.18",
-    "expo-av": "^14.0.6",
-<<<<<<< HEAD
+    "expo-av": "~14.0.6",
     "expo-font": "^12.0.9",
-=======
-    "expo-font": "^12.0.8",
->>>>>>> c50a440c291fc21d38cc505e430f3698a80dd165
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
